versioned_docs/version-2026.2.2/turma/ein/ein2024-aa.mdx
---
slug: /turma/ein2024-aa
sidebar_label: EIN2024-AA
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "EIN2024-AA",
  "base": "EIN",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Fábio Fernandes da Silva"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Darlan Roque Dapieve"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_dos_professores",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_dos_professores",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Samir El Halabi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_dos_professores",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Samir El Halabi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Samir El Halabi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_dos_professores",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Atendimento ao Aluno",
          "size": 1,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-AA"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "17:35 - 19:00",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# EIN2024-AA

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
